cmake_minimum_required(VERSION 3.26)
project(Cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(Cpp
        main.cpp
        mainRunningFunction.cpp
        main.h
        ########
        CppLecture/LecturePackage.h
        CppLecture/Template.cpp
        CppLecture/Lec1_CoutComment.cpp
        CppLecture/Lec2_VariablesDatatype.cpp
        CppLecture/Lec3_Constant.cpp
        CppLecture/Lec4_Namespace.cpp
        CppLecture/Lec5_TypedefAliases.cpp
        CppLecture/Lec6_ArithmeticOperator.cpp
        CppLecture/Lec7_TypeConversion.cpp
        CppLecture/Lec8_UserInput.cpp
        CppLecture/Lec9_RelatedMathFunction.cpp
        CppLecture/Lec10_IfSwitchStatement.cpp
        CppLecture/Lec10X.cpp
        CppLecture/Lec11_TernaryOperator.cpp
        CppLecture/Lec12_LogicalOperators.cpp
        CppLecture/Lec13_StringMethod.cpp
        CppLecture/Lec14_WhileLoop.cpp
        CppLecture/Lec15_ForLoop.cpp
        CppLecture/Lec16_BreakContinue.cpp
        CppLecture/Lec17_PseudoRandom.cpp
        CppLecture/Lec18_UserDefinedFunction.cpp
        CppLecture/Lec19_SettingDecimalNumber.cpp
        CppLecture/Lec20_RockPaperScissorGame.cpp
        CppLecture/Lec20XX.cpp
        CppLecture/Lec21_Arrays.cpp
        CppLecture/Lec22_SizeofOperator.cpp
        CppLecture/Lec23_IteratorOverArray.cpp
        CppLecture/Lec24_PassArrayToFunction.cpp
        CppLecture/Lec25_ElementSearchInArray.cpp
        CppLecture/Lec26_BruteForceSort.cpp
        CppLecture/Lec27_FillFunction.cpp
        CppLecture/Lec28_FillArrayWithUserInput.cpp
        CppLecture/Lec29_MultidimensionalArrays.cpp
        CppLecture/Lec30_QuizGame.cpp
        CppLecture/Lec30XXX_.cpp
        CppLecture/Lec31_MemoryAddresses.cpp
        CppLecture/Lec32_PassValuePassReference.cpp
        CppLecture/Lec33_ConstParameters.cpp
        CppLecture/Lec34_LuhnAlgorithm.cpp
        CppLecture/Lec35_Pointers.cpp
        CppLecture/Lec36_NullPointer.cpp
        CppLecture/Lec37_TicTacToe.cpp
        CppLecture/Lec38_DynamicMemory.cpp
        CppLecture/Lec39_Recursion.cpp
        CppLecture/Lec40_FunctionTemplates.cpp
        CppLecture/Lec40XL_.cpp
        CppLecture/Lec41_Structs.cpp
        CppLecture/Lec42_PassStructsAsArguments.cpp
        CppLecture/Lec43_Emun.cpp
        CppLecture/Lec44_ClassObject.cpp
        CppLecture/Lec45_Constructor.cpp
        CppLecture/Lec46_ConstructorOverloading.cpp
        CppLecture/Lec47_GetterSetter.cpp
        CppLecture/Lec48_Static.cpp
        CppLecture/Lec49_OOPInheritance.cpp
        CppLecture/Lec50_PracticeOOP.cpp
        CppLecture/Lec50L_.cpp
        ####################################################################################
        CppTest/TestPackage.h
        CppTest/Template.cpp
        CppTest/Test1.cpp
        CppTest/Test2.cpp
        CppTest/Test3.cpp
        CppTest/Test4.cpp
        CppTest/Test5.cpp
        CppTest/Test6.cpp
        CppTest/Test7.cpp
        CppTest/Test8.cpp
        CppTest/Test9.cpp
        CppTest/Test10.cpp
        ####################################################################################
        CppPointer/PointerPackage.h
        CppPointer/Template.cpp
        CppPointer/PointerLec1_Introduction.cpp
        CppPointer/PointerLec2_VoidPointer.cpp
        CppPointer/PointerLec3_PointerArray.cpp
        CppPointer/PointerLec4_FunctionReturnMultipleValue.cpp
        CppPointer/PointerLec5_DynamicArray.cpp
        CppPointer/PointerLec6_MultidimensionalDynamicArray.cpp
        CppPointer/PointerLec7_.cpp
        CppPointer/PointerLec8_.cpp
        CppPointer/PointerLec9_.cpp
        CppPointer/PointerLec10_.cpp
        CppPointer/PointerLec11_.cpp
        CppPointer/PointerLec12_.cpp
        CppPointer/PointerLec13_.cpp
        CppPointer/PointerLec14_.cpp
        CppPointer/PointerLec15_.cpp
        CppPointer/PointerLec16_.cpp
        CppPointer/PointerLec17_.cpp
        CppPointer/PointerLec18_.cpp
        CppPointer/PointerLec19_.cpp
        CppPointer/PointerLec20_.cpp
        ####################################################################################
        CppBuildInLibrary/BuildInLibraryPackage.h
        ################
        CppBuildInLibrary/1_Iomanip/Template.cpp
        CppBuildInLibrary/1_Iomanip/Lec1_Overview.cpp
        CppBuildInLibrary/1_Iomanip/Lec2_SetwSetfill.cpp
        CppBuildInLibrary/1_Iomanip/Lec3_SetPrecision.cpp
        CppBuildInLibrary/1_Iomanip/Lec4_.cpp
        CppBuildInLibrary/1_Iomanip/Lec5_.cpp
        CppBuildInLibrary/1_Iomanip/Lec6_.cpp
        CppBuildInLibrary/1_Iomanip/Lec7_.cpp
        CppBuildInLibrary/1_Iomanip/Lec8_.cpp
        CppBuildInLibrary/1_Iomanip/Lec9_.cpp
        CppBuildInLibrary/1_Iomanip/Lec10_.cpp
        ################
        CppBuildInLibrary/2_Fstream/Template.cpp
        CppBuildInLibrary/2_Fstream/Lec1_.cpp
        CppBuildInLibrary/2_Fstream/Lec2_.cpp
        CppBuildInLibrary/2_Fstream/Lec3_.cpp
        CppBuildInLibrary/2_Fstream/Lec4_.cpp
        CppBuildInLibrary/2_Fstream/Lec5_.cpp
        CppBuildInLibrary/2_Fstream/Lec6_.cpp
        CppBuildInLibrary/2_Fstream/Lec7_.cpp
        CppBuildInLibrary/2_Fstream/Lec8_.cpp
        CppBuildInLibrary/2_Fstream/Lec9_.cpp
        CppBuildInLibrary/2_Fstream/Lec10_.cpp
        ################
        CppClassLecture/ClassLecturePackage.h
        CppClassLecture/Template.cpp
        CppClassLecture/ClassLec1_Introduction.cpp
        CppClassLecture/ClassLec2_ConstructorAndMethod.cpp
        CppClassLecture/ClassLec3_Encapsulation.cpp
        CppClassLecture/ClassLec4_Inheritance.cpp
        CppClassLecture/ClassLec5_Polymorphism.cpp
        CppClassLecture/ClassLec6_VirtualFunction.cpp
        CppClassLecture/ClassLec7_Abstraction.cpp
        CppClassLecture/ClassLec8_OperatorOverloading.cpp
        CppClassLecture/ClassLec9_FriendFunction.cpp
        CppClassLecture/ClassLec10_Constructor.cpp
        CppClassLecture/ClassLec11_Destructor.cpp
        CppClassLecture/ClassLec12_CopyConstructor.cpp
        CppClassLecture/ClassLec13_.cpp
        CppClassLecture/ClassLec14_.cpp
        CppClassLecture/ClassLec15_.cpp
        CppClassLecture/ClassLec16_.cpp
        CppClassLecture/ClassLec17_.cpp
        CppClassLecture/ClassLec18_.cpp
        CppClassLecture/ClassLec19_.cpp
        CppClassLecture/ClassLec20_.cpp)